Feature: Updated view to have cleaner look

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -2,14 +2,14 @@
 {% block content %}
 
 <div class="card" class="m-5 p-2">
-    <h5 class="card-title">{{ player.fldName }} - {{ player.fldAge }}</h5>
+    <h5 class="card-title">Name: {{ player.fldName }}</h5>
 
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">{{ player.fldTeam }}</li>
-        <li class="list-group-item">{{ player.fldPosition }}</li>
-        <li class="list-group-item">{{ player.fldHeight }}</li>
-        <li class="list-group-item">{{ player.fldWeight }}</li>
-        <li class="list-group-item">{{ player.fldAge }}</li>
+        <li class="list-group-item">Team:{{ player.fldTeam }}</li>
+        <li class="list-group-item">Position:{{ player.fldPosition }}</li>
+        <li class="list-group-item">Height: {{ player.fldHeight }}</li>
+        <li class="list-group-item">Weight: {{ player.fldWeight }}</li>
+        <li class="list-group-item">Age: {{ player.fldAge }}</li>
     </ul>
     <div class="card-body">
         <a href="/edit/{{player.id}}" class="card-link btn btn-primary">Edit</a>
